<!--
  ~ Copyright 2018 Sanket Bhat
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Pop Moviez</string>

    <!--Image description-->
    <string name="list_item_image_desc">Movie poster</string>
    <string name="movie_detail_movie_poster_description">Movie poster</string>
    <string name="movie_list_error_layout_image_description">Error image</string>

    <!--Movie detail-->
    <string name="title_movie_detail">Movie Detail</string>
    <string name="movie_detail_backdrop_image_description">Backdrop image</string>
    <string name="movie_detail_release_date_label">Release Date</string>
    <string name="movie_detail_average_rating_label">Average rating</string>
    <string name="movie_detail_plot_label">Overview</string>
    <string name="movie_detail_average_rating_string">(%.1f/5.0)</string>
    <string name="movie_detail_trailers_label">Videos</string>
    <string name="movie_detail_review_label">Reviews</string>
    <string name="movie_details_video_description">Movie Video/Trailer</string>
    <string name="movie_details_video_play_button">Play Button</string>
    <string name="empty_list_message">No reviews!</string>
    <string name="video_list_empty_message">No videos!</string>
    <string name="intent_chooser_title">Choose the app to share</string>
    <string name="review_author_template">- %s</string>

    <!--Movie List-->
    <string name="movie_list_error_layout_error_message">Oops, An error occurred!</string>
    <string name="movie_list_error_layout_retry_button_label">Retry</string>
    <string name="movie_grid_item_loading_indicator_text">Loading more movies…</string>
    <string name="shared_element_transition_name">poster_image</string>
    <string name="item_clicked_no_app_error">No application installed to open the item</string>
    <string name="title_popular_movie">Popular Movies</string>
    <string name="title_top_rated_movie">Top Rated Movies</string>
    <string name="menu_main_action_favorites">Favorites</string>
    <string name="movie_list_favorites_empty_message">No favorite movies!</string>

    <!--Menu-->
    <string name="menu_main_action_sort">Sort</string>
    <string name="menu_main_option_popular_movies">Most Popular</string>
    <string name="menu_main_option_top_rated">Top Rated</string>
    <string name="menu_main_credits">Credits</string>
    <string name="credit_dialog_button">OK</string>
    <string name="credits_string">Retrofit \nhttp://square.github.io/retrofit/  \n\n
    TheMovieAPI \n https://www.themoviedb.org/documentation/api  \n\n
    Picasso \n http://square.github.io/picasso/</string>
    <string name="menu_share">Share</string>
    <string name="share_text_template">Here is an awesome movie I found, watch the trailer %s .Explore popular movies list using app \'Pop Moviez\' :)</string>
    <string name="movie_detail_show_more"><![CDATA[Show More>]]></string>
    <string name="fab_content_description">Add to favorites</string>

</resources>