<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Sanket Bhat
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/movie_list"
            android:name="com.udacity.sanketbhat.popularmovies.MovieListFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:visibility="gone"
            tools:context=".ui.MovieListActivity"
            tools:listitem="@layout/movie_grid_item" />

        <ProgressBar
            android:id="@+id/movie_load_progress"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="visible" />

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/movieListErrorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/movie_list_error_layout_image_width"
                    android:layout_height="@dimen/movie_list_error_layout_image_height"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/common_content_margin"
                    android:contentDescription="@string/movie_list_error_layout_image_description"
                    app:srcCompat="@drawable/ic_movie_list_error" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/common_content_margin"
                    android:text="@string/movie_list_error_layout_error_message"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    tools:text="Oops, An error occurred!" />

                <Button
                    android:id="@+id/movieListErrorRetryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/movie_list_error_layout_retry_button_label"
                    tools:text="Retry" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</layout>