<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Sanket Bhat
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/movie_detail_card_view_margin"
        android:padding="@dimen/common_card_view_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/movieDetailPrimaryCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/movieDetailPoster"
                android:layout_width="@dimen/movie_detail_movie_poster_width"
                android:layout_height="@dimen/movie_detail_movie_poster_height"
                android:layout_marginBottom="@dimen/common_content_margin"
                android:layout_marginStart="@dimen/common_content_margin"
                android:layout_marginTop="@dimen/common_content_margin"
                android:contentDescription="@string/movie_detail_movie_poster_description"
                android:transitionName="@string/shared_element_transition_name"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/movieDetailName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_content_margin"
                android:layout_marginStart="@dimen/common_content_margin"
                android:layout_marginTop="@dimen/common_content_margin"
                android:ellipsize="end"
                android:maxLines="3"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movieDetailPoster"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Deadpool 2" />

            <TextView
                android:id="@+id/movieDetailGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_content_margin"
                android:layout_marginStart="@dimen/common_content_margin"
                android:layout_marginTop="@dimen/common_content_margin"
                android:ellipsize="end"
                android:maxLines="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movieDetailPoster"
                app:layout_constraintTop_toBottomOf="@+id/movieDetailName"
                tools:text="Action, Comedy, Science Fiction" />

            <TextView
                android:id="@+id/movieDetailReleaseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_content_margin"
                android:layout_marginStart="@dimen/common_content_margin"
                android:layout_marginTop="@dimen/common_content_margin"
                android:ellipsize="end"
                android:maxLines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/movieDetailPoster"
                app:layout_constraintTop_toBottomOf="@+id/movieDetailReleaseDateLabel"
                tools:text="15 May 2018" />

            <TextView
                android:id="@+id/movieDetailRatingText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_content_margin"
                android:layout_marginEnd="@dimen/common_content_margin"
                android:layout_marginStart="@dimen/common_content_margin"
                android:layout_marginTop="@dimen/common_content_margin"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movieDetailPoster"
                app:layout_constraintTop_toBottomOf="@+id/movieDetailRatingLabel"
                app:layout_constraintVertical_bias="0.0"
                tools:text="(3.9/5)" />

            <TextView
                android:id="@+id/movieDetailReleaseDateLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_content_margin"
                android:layout_marginStart="@dimen/common_content_margin"
                android:layout_marginTop="@dimen/common_label_margin_top"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/movie_detail_release_date_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movieDetailPoster"
                app:layout_constraintTop_toBottomOf="@+id/movieDetailGenre" />

            <TextView
                android:id="@+id/movieDetailRatingLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_content_margin"
                android:layout_marginStart="@dimen/common_content_margin"
                android:layout_marginTop="@dimen/common_label_margin_top"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/movie_detail_average_rating_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movieDetailPoster"
                app:layout_constraintTop_toBottomOf="@+id/movieDetailReleaseDate" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/movie_detail_card_view_margin"
        android:layout_marginBottom="@dimen/common_content_margin"
        android:padding="@dimen/common_card_view_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/movieDetailSynopsisCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewPlotLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_content_margin"
                android:layout_marginStart="@dimen/common_content_margin"
                android:layout_marginTop="@dimen/common_content_margin"
                android:text="@string/movie_detail_plot_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movieDetailPlotSynopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_content_margin"
                android:layout_marginEnd="@dimen/common_content_margin"
                android:layout_marginStart="@dimen/common_content_margin"
                android:layout_marginTop="@dimen/common_content_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPlotLabel"
                tools:text="Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boy's life." />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>